fixed help page overflow

--- a/main.css
+++ b/main.css
@@ -60,6 +60,7 @@ p{
 }
 
 .content{
+    z-index: 10;
     grid-row: 4 / span 2;
     grid-column: 2 / span 1;
 }
@@ -108,16 +109,16 @@ h1{
 #instructions{
     display: none;
     position: absolute;
-    top: 10%;
+    top: 7%;
     left: 10%;
     width: 80%;
-    font-size: calc(1.8 * var(--units));;
+    font-size: calc(1.8 * var(--units));
     border: calc(1 * var(--units)) var(--mbGrey) solid;
     background-color: white;
     border-radius: calc(4 * var(--units));
     padding: calc(4.5 * var(--units));
     padding-top: calc(2.5 * var(--units));
-    z-index: 7;
+    z-index: 50;
 }
 
 #instructions img{
@@ -611,13 +612,22 @@ ol{
     }
 }
 
-@media (min-aspect-ratio:8/10) and (max-aspect-ratio:20/19){
+@media (min-aspect-ratio:7/10) and (max-aspect-ratio:10/9){
     .roundButtons{
         border-width: calc(0.65 * var(--units));
         font-size: calc(3 * var(--units));
     }
     .bigButtons{
         font-size: calc(3 * var(--units));
+    }
+    #instructions{
+        top: 2%;
+        width: 100%;
+        left: 0;
+        font-size: calc(1.6 * var(--units));
+    }
+    .instrucHeader{
+    font-size: calc(2.5 * var(--units));
     }
 }
 
